infra/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-svc
  namespace: logging
spec:
  selector:
    app: elasticsearch
  # Set up a headless service
  clusterIP: None
  ports:
    # The HTTP API interface for client requests
  - name: http-api
    port: 9200
    targetPort: 9200
    # The transport interface for inter-node communication
  - name: inter-node
    port: 9300
    targetPort: 9300

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-cluster
  namespace: logging
spec:
  selector:
    matchLabels:
      app: elasticsearch
  serviceName: elasticsearch-svc
  # Create at least 3 primary-eligible nodes so that if one fails, the others can still safely form a quorum.
  # Source: https://www.elastic.co/guide/en/elasticsearch/reference/current/modules-discovery-voting.html
  replicas: 3
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: http-api
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
        volumeMounts:
        - name: elasticsearch-data # should match volumeClaimTemplates.metadata.name
          mountPath: /usr/share/elasticsearch/data
        # See required envvars: https://www.elastic.co/guide/en/elasticsearch/reference/7.15/docker.html#docker-compose-file
      volumes:
        - name: elasticsearch-data
          hostPath:
            path: /var/tmp/elasticsearch-data
            type: DirectoryOrCreate
  # volumeClaimTemplates:
  # - metadata:
  #     name: elasticsearch-data
  #     labels:
  #       app: elasticsearch
  #   spec:
  #     # storageClassName: do-block-storage
  #     storageClassName: local-storage
  #     accessModes:
  #       - ReadWriteOnce
  #     resources:
  #       requests:
  #         storage: 1Gi
